fixes and bundles with jlink & jpackage